[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/FontTheme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/Title.png" type="Texture" id=2]
[ext_resource path="res://Menu Scenes/Home Menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 608.0
margin_bottom = 342.0
color = Color( 0.137255, 0.184314, 0.145098, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 608.0
margin_bottom = 342.0
custom_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_right = 608.0
margin_bottom = 332.0
grow_horizontal = 0
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer2"]
margin_right = 608.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer2/Control"]
position = Vector2( 304, 90 )
scale = Vector2( 7, 7 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 168.0
margin_right = 608.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 608.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_top = 0
custom_constants/margin_left = 150
custom_constants/margin_bottom = 0

[node name="Start Button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer"]
margin_left = 150.0
margin_right = 458.0
margin_bottom = 33.0
focus_mode = 0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Start Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 43.0
margin_right = 608.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_top = 0
custom_constants/margin_left = 150
custom_constants/margin_bottom = 0

[node name="Lv Select Button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer2"]
margin_left = 150.0
margin_right = 458.0
margin_bottom = 34.0
focus_mode = 0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Level Select"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 87.0
margin_right = 608.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_top = 0
custom_constants/margin_left = 150
custom_constants/margin_bottom = 0

[node name="Options Button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer3"]
margin_left = 150.0
margin_right = 458.0
margin_bottom = 33.0
focus_mode = 0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Options"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 130.0
margin_right = 608.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_top = 0
custom_constants/margin_left = 150
custom_constants/margin_bottom = 0

[node name="Exit Button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer4"]
margin_left = 150.0
margin_right = 458.0
margin_bottom = 34.0
focus_mode = 0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Exit Game"

[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer/Start Button" to="." method="_on_Start_Button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer2/Lv Select Button" to="." method="_on_Lv_Select_Button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer4/Exit Button" to="." method="_on_Exit_Button_button_up"]
